# fontprimer

./: pyproject.toml
.github/workflows/: ci.yml
Lib/fontprimer/: __init__.py  colrguidelines.py  guidelines.py
